--- a/.env-exemple
+++ b/.env-exemple
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_USER=user
-MONGO_URI=mongo_URI
-JWT_ACCESS_TOKEN_SECRET=secret1secret1secret1
+MONGO_USER=team5
+MONGO_URI=mongodb+srv://team5:Team5Pass@cluster0.putdhvw.mongodb.net/capstoneDB?appName=Cluster0
+JWT_ACCESS_TOKEN_SECRET=secretcodeToSecureJWT25104000
 JWT_ACCESS_TOKEN_EXPIRES_IN=50000m
